<resources>
    <string name="app_name">PasswordSaver</string>
    <string name="online_text">Your password will be saved on cloud database. Internet connection is required only while adding/deleting/editing password.\n\nNote : \n1. Your password will remain safe even if you uninstall this app.\n2. The password is encrypted in the such a way that no one can see it (including us).</string>
    <string name="trySignIn_text">If you ever installed this app before, try signIn, your app settings and saved passwords will be restored.</string>
    <string name="setup_mode">Setup Mode</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="next">Next</string>
    <string name="menubutton">menuButton</string>
    <string name="appSetting">AppSettings</string>
    <string name="add_password">Add Password</string>
    <string name="backbutton">backButton</string>
    <string name="save_button">save Button</string>
    <string name="user_name">Username</string>
    <string name="check_password_strength">Password strength</string>
    <string name="mixture_of_both_uppercase_and_lowercase_characters">Mixture of both uppercase and lowercase characters</string>
    <string name="one_special_character_amp"><![CDATA[One special character (!@#?&=+$)]]></string>
    <string name="special_character_amp"><![CDATA[Special characters (!@#?&=+$)]]></string>
    <string name="at_least_8_characters">At least 8 characters</string>
    <string name="don_t_use_lt_or_gt"><![CDATA[Don\'t use < or >]]></string>
    <string name="a_digit">A digit</string>
    <string name="savedPasswords">SavedPasswords</string>
    <string name="t">true</string>
    <string name="f">false</string>
    <string name="editPassword">Edit Password</string>
    <string name="settings">Settings</string>
    <string name="change_mode">Change Mode</string>
    <string name="change_password">Change App Password</string>
    <string name="editbtn">editBtn</string>
    <string name="general_settings">General Settings</string>
    <string name="enter_password_every_time_you_copy_password">Enter app password every time you copy password.</string>
    <string name="enter_password_every_time_you_want_to_see_your_password">Enter app password before deleting your password.</string>
    <string name="no_passwords_added">No Passwords added!!!</string>
    <string name="saved_passwords">Saved Passwords</string>
    <string name="site_name">Site Name (Optional)</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="setup_password">Setup Password</string>
    <string name="save">Save</string>
    <string name="or">Or</string>
    <string name="password">Password</string>
    <string name="helpbutton">helpButton</string>
    <string name="offline_text">Your Password will be saved on your device. No Internet connection required.\n\nNote: 1. After you uninstall this app you will lose all your data.\n2. Also if you go to app setting and \'clear the data\' of this app you will lose all your password.</string>
    <string name="mode">Mode</string>
    <string name="log_in">Log in using your google account</string>
    <string name="addbutton">addButton</string>
    <string name="onItemClick">onIemClick</string>
    <string name="onCopyBtnClick">onCopyButtonClick</string>
    <string name="onSeePasswordBtnClick">onSeePasswordBtnClick</string>
    <string name="onDeleteBtnClick">onDeleteButtonClick</string>
    <string name="onEditClick">onEditClick</string>
    <string name="check_previous_app_setting_message">Checking for previous app settings…</string>
    <string name="use_fingerprint_authentication">Use Fingerprint authentication.</string>
    <string name="add_site_link_optional">Add site link (Optional)</string>
    <string name="setup">Setup</string>
    <string name="search">Search</string>
    <string name="enter_app_password">Enter app password</string>
    <string name="confirm_app_password">Confirm app Password</string>
    <string name="select_one_security_question">Select one security question</string>
    <string name="your_answer">Your answer</string>
    <string name="app_password_setup">App password Setup</string>
    <string name="password_generator">Password generator</string>
    <string name="generate">Generate</string>
    <string name="max_length">Max length</string>
    <string name="must_include">Must include characters</string>
    <string name="include_digits">Include digits</string>
    <string name="enter_the_characters_you_want_to_include">Enter the characters you want to include</string>
    <string name="include_only_digits">Include only digits</string>
    <string name="export_passwords">Export passwords (PDF)</string>
    <string name="passord_not_match">Password doesn\'t match!!!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="after_deleting_will_lose_this_password">After deleting you will lose this password.</string>
    <string name="delete">DELETE</string>
    <string name="cancel">Cancel</string>
    <string name="password_deleted">Password deleted</string>
    <string name="undo">Undo</string>
    <string name="password_restored">Password restored</string>
    <string name="no_site_name">No site name</string>
    <string name="confirm">Confirm</string>
    <string name="enter_the_app_password">Enter the app password</string>
    <string name="password_exported">Password exported</string>
    <string name="password_exported_note">Password is exported to Internal storage/Documents/PasswordSaver.\n\nNote : The pdf file requires password and it is same as this app password.\n\nIMPORTANT : Please don\'t share this file with anyone and delete the file as soon as your work is done.</string>
    <string name="site_name_">Site name</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="your_password">Your Password</string>

    <string-array name="security_questions">
        <item>"What is the name of your school?"</item>
        <item>"Who is your favourite movie star?"</item>
        <item>"Which flower do like most?"</item>
        <item>"What is your pet name?"</item>
        <item>"Your best-friend name?"</item>
    </string-array>
</resources>