<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_menu_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/home_menu_password_generator"
        android:title="@string/password_generator" />
    <item
        android:id="@+id/home_menu_export_password"
        android:title="@string/export_passwords" />
    <item
        android:id="@+id/home_menu_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />
</menu>