<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/passwordTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:maxLines="2"
        android:padding="5dp"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/copyPasswordFAB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Your password" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/copyPasswordFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:contentDescription="@string/onCopyBtnClick"
        android:focusable="true"
        android:tooltipText="Copy password"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/passwordTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passwordTV"
        app:srcCompat="@drawable/ic_outline_file_copy_24"
        tools:targetApi="o" />

    <Button
        android:id="@+id/generatePasswordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/generate"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copyPasswordFAB" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generatePasswordBtn" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/max_length"
        android:textColor="#0091EA"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/passwordTV"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/must_include"
        android:textColor="#0091EA"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/passwordTV"
        app:layout_constraintTop_toBottomOf="@+id/upperLowerCaseMixtureCB" />

    <SeekBar
        android:id="@+id/passwordLengthSeekbar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:max="21"
        android:progress="4"
        app:layout_constraintBottom_toBottomOf="@+id/passwordLengthTV"
        app:layout_constraintEnd_toStartOf="@+id/passwordLengthTV"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/passwordLengthTV" />

    <TextView
        android:id="@+id/passwordLengthTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:text="8" />

    <CheckBox
        android:id="@+id/includeSpecialCharactersCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/special_character_amp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/passwordLengthTV" />

    <CheckBox
        android:id="@+id/includeDigitsCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/include_digits"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/includeSpecialCharactersCB" />

    <CheckBox
        android:id="@+id/includeOnlyDigitsCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/include_only_digits"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/includeDigitsCB" />

    <CheckBox
        android:id="@+id/upperLowerCaseMixtureCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/mixture_of_both_uppercase_and_lowercase_characters"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/includeOnlyDigitsCB" />

    <EditText
        android:id="@+id/mustIncludeET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/enter_the_characters_you_want_to_include"
        android:hint="@string/enter_the_characters_you_want_to_include"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/upperLowerCaseMixtureCB"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mustIncludeET" />


</androidx.constraintlayout.widget.ConstraintLayout>