<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/delete"
        app:srcCompat="@drawable/ic_baseline_delete_24" />

    <ImageButton
        android:id="@+id/editBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/deleteBtn"
        app:layout_constraintEnd_toStartOf="@+id/deleteBtn"
        app:layout_constraintTop_toTopOf="@+id/deleteBtn"
        android:contentDescription="@string/editbtn"
        app:srcCompat="@drawable/ic_baseline_edit_24" />

    <TextView
        android:id="@+id/sitenameTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="4dp"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/siteNameCopyBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <ImageButton
        android:id="@+id/passwordCopyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/passwordTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passwordTV"
        android:contentDescription="@string/onCopyBtnClick"
        app:srcCompat="@drawable/ic_outline_file_copy_24" />

    <TextView
        android:id="@+id/usernameTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="4dp"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/userNameCopyBtn"
        app:layout_constraintStart_toStartOf="@+id/sitenameTV"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <ImageButton
        android:id="@+id/userNameCopyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/usernameTV"
        app:layout_constraintEnd_toEndOf="@+id/passwordCopyBtn"
        app:layout_constraintTop_toTopOf="@+id/usernameTV"
        android:contentDescription="@string/onCopyBtnClick"
        app:srcCompat="@drawable/ic_outline_file_copy_24" />

    <TextView
        android:id="@+id/passwordTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="4dp"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/passwordCopyBtn"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <ImageButton
        android:id="@+id/siteNameCopyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/sitenameTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sitenameTV"
        android:contentDescription="@string/onCopyBtnClick"
        app:srcCompat="@drawable/ic_outline_file_copy_24" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:padding="1dp"
        android:text="@string/site_name_"
        android:textColor="@color/accent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBtn" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="1dp"
        android:text="@string/user_name"
        android:textColor="@color/accent"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/siteLinkTV" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="1dp"
        android:text="@string/password"
        android:textColor="@color/accent"
        app:layout_constraintStart_toStartOf="@+id/usernameTV"
        app:layout_constraintTop_toBottomOf="@+id/usernameTV" />

    <TextView
        android:id="@+id/siteLinkTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:padding="5dp"
        android:textColor="#536DFE"
        android:textIsSelectable="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/sitenameTV"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sitenameTV"
        tools:text="https://www.google.com" />

</androidx.constraintlayout.widget.ConstraintLayout>